# clack

./: Cargo.toml
assets/: clack.toml
src/: app.rs  main.rs  route.rs
src/cache/: mod.rs
src/common/constants/: icon.rs
src/common/enums/: request.rs
src/constants/: configuration.rs  dir.rs  mod.rs
src/context/: mod.rs
src/datasources/: cache.rs  configuration.rs  mod.rs  slack.rs
src/entities/: configuration.rs  mod.rs
src/entities/slack/: authorization.rs  conversations.rs  messages.rs  mod.rs  users.rs
src/enums/: mod.rs  section.rs  user_mode.rs  widgets.rs
src/keymaps/: mod.rs
src/presentation/: mod.rs
src/presentation/screen/: mod.rs
src/presentation/screen/home/: mod.rs
src/presentation/screen/landing/: mod.rs
src/presentation/widgets/: channels.rs  loading.rs  mod.rs  section_data.rs  status_line.rs
src/presentation/widgets/channel/: mod.rs
src/presentation/widgets/common/: block.rs
src/presentation/widgets/input/: mod.rs
src/presentation/widgets/message/: mod.rs
src/presentation/widgets/messages/: mod.rs
src/presentation/widgets/status_line/: mod.rs
src/presentation/widgets/thread/: mod.rs
src/states/: initial.rs  mod.rs
src/utils/: keycode.rs  mod.rs  string.rs
