[package]
name = "clack"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
regex = "1.11.1"
reqwest = "0.12.9"
rustls = "0.23.18"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tokio-rustls = "0.26.0"
toml = "0.8.19"
warp = "0.3.7"
